# gpytorch-qr

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
doc/source/: centergap_gpqr.rst  conf.py  direct_gpqr.rst  index.rst  utilities.rst
doc/source/reference/: centergap_gpqr.rst  direct_gpqr.rst  index.rst  utilities.rst
examples/: config_notebook.py  config_svg.py  index_examples.rst  index_tutorial.rst  tutorial.ipynb
examples/00_Basic_Usage/: gpqr.ipynb  gpqr_cg.ipynb  index.rst  mtgpqr.ipynb  mtgpqr_cg.ipynb  mtgpqr_cg_independent.ipynb  mtgpqr_independent.ipynb
examples/01_Prior_Mean/: gpqr.ipynb  gpqr_cg.ipynb  index.rst  mtgpqr.ipynb  mtgpqr_cg.ipynb  mtgpqr_cg_independent.ipynb  mtgpqr_independent.ipynb
examples/01_Prior_Mean/mean_module/: index.rst  mtgpqr.ipynb  (+3 more)
examples/02_Multi_input/: constraint.ipynb  index.rst  mtgpqr_cg.ipynb  scaling.ipynb
examples/02_Multitask_Independent/: index.rst  mtgpqr.ipynb  mtgpqr_cg.ipynb
examples/02_Multivariable/: constraint.ipynb  gpqr.ipynb  index.rst  mtgpqr_cg.ipynb  scaling.ipynb
examples/02_Multivariate/: constraint.ipynb  gpqr.ipynb  index.rst  mtgpqr_cg.ipynb  scaling.ipynb
examples/03_Batch/: cross_validation.ipynb  index.rst
examples/03_Cross_Validation/: index.rst  model_selection.ipynb
examples/03_Multi_output/: index.rst  mtgpqr.ipynb  mtgpqr_cg.ipynb  mtgpqr_cg_correlated_centrals.ipynb
examples/03_Multioutput/: cross_validation.ipynb  index.rst
examples/03_Multivariate/: index.rst  mtgpqr.ipynb
examples/04_Cross_Validation/: cross_validation.ipynb  index.rst
src/gpytorch_qr/: __init__.py  ald.py  base.py  centergap.py  distributions.py  gp.py  gpqr.py  gpqr_cg.py  likelihood.py  likelihoods.py  means.py  models.py  mtgpqr.py  mtgpqr_cg.py  utils.py  variational.py
tests/: test_gpqr.py  test_gpqr_cg.py  test_likelihood.py  test_mtgpqr.py  test_mtgpqr_cg.py
(+3 files in other folders)
