[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gpytorch-qr"
version = "0.4.0.post0"
authors = [
    {name = "Jisoo Song", email = "jeesoo9595@snu.ac.kr"}
]
description = "Gaussian process quantile regression using GPyTorch"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = [
    "LICENSE",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Operating System :: OS Independent",
]
dependencies = [
    "gpytorch>=1.10",
]

[project.urls]
homepage = "https://pypi.python.org/pypi/gpytorch-qr/"
source = "https://github.com/JSS95/gpytorch-qr"
documentation = "https://gpytorch-qr.readthedocs.io"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-doctestplus",
    "matplotlib",
    "nbconvert",
    "ipykernel",
]
doc = [
    "sphinx",
    "numpydoc",
    "pydata_sphinx_theme",
    "matplotlib",
    "myst-nb",
    "scikit-learn",
    "pytest-doctestplus",
]
dev = [
    "flake8",
    "black[jupyter]",
    "isort",
    "nbstripout",
    "gpytorch-qr[test,doc]",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
    "ELLIPSIS",
]
addopts = "--ignore=doc --ignore=examples --doctest-plus --import-mode=importlib"
